--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.5.5"
+    "mongoose": "^5.5.5",
+    "morgan": "^1.9.1"
   }
 }
