--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "@ckeditor/ckeditor5-build-classic": "^12.1.0",
     "@ckeditor/ckeditor5-vue": "^1.0.0-beta.2",
     "cors": "^2.8.5",
+    "express": "^4.16.4",
     "mongoose": "^5.5.6",
     "sequelize": "^5.8.5"
   }
