--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,6 @@
   "author": "Andre Suchitra",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.437.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
@@ -17,7 +16,6 @@
     "google-auth-library": "^3.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.0",
-    "multer": "^1.4.1",
-    "multer-s3": "^2.9.0"
+    "multer": "^1.4.1"
   }
 }
