--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Andre Suchitra",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^2.5.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
