--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "google-auth-library": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.6",
     "volleyball": "^1.5.1"
   }
