--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "google-auth-library": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.5",
     "multer": "^1.4.1",
