--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass --watch ../client/assets/scss/_main.scss:../client/assets/css/style.css"
+    "sass": "sass --watch ../client/assets/scss/_main.scss:../client/assets/css/style.css",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,13 +14,16 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^12.1.0",
     "@ckeditor/ckeditor5-vue": "^1.0.0-beta.2",
+    "@google-cloud/storage": "^1.2.0",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "google-auth-library": "^3.1.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.6"
+    "mongoose": "^5.5.6",
+    "multer": "^1.4.1",
+    "sweetalert2": "^8.10.7"
   },
   "devDependencies": {
     "dotenv": "^8.0.0"
