--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "dotenv": "^8.0.0"
+  },
   "keywords": [],
   "description": ""
 }
