--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "google-auth-library": "^3.1.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.5.6",
     "multer": "^1.4.1",
     "sweetalert2": "^8.10.7"
