--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "@google-cloud/storage": "^2.5.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
-    "mongoose": "^5.5.6"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.5.6",
+    "multer": "^1.4.1"
   },
   "devDependencies": {},
   "scripts": {
