--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app",
+    "start": "node app"
   },
   "author": "",
   "license": "ISC",
@@ -12,10 +13,12 @@
     "@google-cloud/storage": "^2.5.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "google-auth-library": "^3.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.0"
+  },
+  "devDependencies": {
+    "dotenv": "^7.0.0"
   }
 }
