--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^2.5.0",
+    "@google-cloud/text-to-speech": "^0.5.1",
     "@google-cloud/vision": "^0.25.0",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "google-auth-library": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.5",
     "multer": "^1.4.1"
