--- a/server/.env.example
+++ b/server/.env.example
@@ -3,6 +3,14 @@ JWT_SECRET=
 GOOGLE_CLIENT_ID=
 MONGO_URL=
 MONGO_ATLAS_URI=
+
+
 CLOUD_BUCKET=
 GCLOUD_PROJECT=
 KEYFILE_PATH=
+GOOGLE_VISION_APIKEY=
+PROJECT_ID=
+
+GOOGLE_APPLICATION_CREDENTIALS=
+
+IPSTACK_API_KEY=
