--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^1.2.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "google-auth-library": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.5",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "multer": "^1.3.0"
   }
 }
