resolve small bugs after deploy

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ credentials.json
 hacktiv8-5f73045c50ae.json
 hacktiv8-83ae6d56bbe8TALENT.json
 keyfile.json
+keyfilewp2.json
 keyfilephase2hacktiv-c3ea32e3f879.json
 visiondaridavitabucket.json
 visionphase2hacktiv-3953a81b40be.json
