--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,18 @@
   "main": "app.js",
   "dependencies": {
     "@google-cloud/storage": "^2.5.0",
+    "@google-cloud/vision": "^0.25.0",
     "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "google-auth-library": "^3.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.6",
-    "multer": "^1.4.1"
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "nodemailer": "^6.1.1"
   },
   "devDependencies": {},
   "scripts": {
