--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,5 @@
 MONGODB_CONNECTION = mongodb+srv://admin:admin@mini-wp-cnbqf.mongodb.net/test?retryWrites=true
+GCLOUD_PROJECT_ID = mini-wp-240006
+CLOUD_BUCKET = yploekito
+KEYFILE_PATH = keyfile.json
+SECRET = nanti_pakai_env
