--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^12.1.0",
     "@ckeditor/ckeditor5-vue": "^1.0.0-beta.2",
+    "@google-cloud/storage": "^2.5.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.6",
+    "multer": "^1.4.1",
     "sequelize": "^5.8.5"
   }
 }
