env example update

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,3 +3,5 @@ bucket=<your google cloud bucket>
 googleId=<your google cloud project>
 keyfile=<your keyfile path>
 CLIENT_ID=<your google client id>
+EMAIL_NODEMAILER=<your email for nodemailer>
+PASSWORD_NODEMAILER=<your password nodemailer>
