--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^2.5.0",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
