--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
     "express": "^4.16.4",
     "google-auth-library": "^3.1.2",
     "jsonwebtoken": "^8.5.1",
+    "kue": "^0.11.6",
     "mongoose": "^5.5.5",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "nodemailer": "^6.1.1"
   },
   "devDependencies": {
     "dotenv": "^8.0.0"
